[package]
name = "gaze"
version = "0.3.0"
publish = true
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Gaze is a small utility library with the goal of making it easier to scan/lex text."
repository = "https://github.com/almibe/gaze/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
